# corgan

./: .gitignore  .travis.yml  Makefile  Makefile.am  README  README.md  configure.ac  corgan.c  corgan.glade  corgan.h  corgan_contacts.c  corgan_contacts.h  corgan_data.c  corgan_data.h  corgan_paths.c  corgan_paths.h  corgan_schedule.c  corgan_schedule.h  corgan_signals.c  corgan_signals.h  desktop_template
.github/workflows/: build.yml  ccpp.yml  main.yml
data/: Makefile.am  corgan.desktop.in
po/: Makevars  POTFILES.in  corgan.pot  el.po
src/: Makefile.am  contacts.c  contacts.h  corgan.c  corgan.glade  corgan.h  corgan_contacts.c  corgan_contacts.h  corgan_paths.c  corgan_paths.h  corgan_schedule.c  corgan_schedule.h  corgan_signals.c  corgan_signals.h  corgan_window.ui  error.ui  gresource.xml  paths.c  paths.h  schedule.c  schedule.h  signals.c  signals.h  test_cleanup  test_contacts.c  test_paths.c  test_schedule.c  test_util.c  util.c  util.h  window.ui
